# agents

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  justfile  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: check.yml
agent_registry/: __init__.py  agents.py  claude_code.py  cli.py  codex.py  copilot.py  cursor.py  mcp_tools.py  model_translation.py  opencode.py
agents/Explore/: agent.md
agents/architecture-reviewer/: agent.md
agents/cli-tool-designer/: agent.md
agents/code-reviewer/: agent.md
agents/data-engineer/: agent.md
agents/debugging-specialist/: agent.md
agents/docs-lookup/: agent.md
agents/documentation-writer/: agent.md
agents/grafana-read/: agent.md
agents/hippo-query/: agent.md
agents/java-implementer/: agent.md
agents/java-reviewer/: agent.md
agents/jj-workflow/: agent.md
agents/kotlin-implementer/: agent.md
agents/kotlin-reviewer/: agent.md
agents/linear-ops/: agent.md
agents/mcp-server-builder/: agent.md
agents/pr-manager/: agent.md
agents/python-implementer/: agent.md
docs/: mechanical-agents.md
eval/: .env.example  .gitignore  HANDOFF.md  agents.py  pyproject.toml  run_eval.py  scorers.py  tasks.py
mining/: mine_hippo.py  queries.sql
research/: 2026-06-20-coding-agents-rust.md  2026-06-22-claude-code-domain-agents.md
schema/: agent.schema.json  skill.schema.json
tests/: test_agent_registry.py  test_challenges.py  test_routing_context.py
(+91 files in other folders)
