[project]
name = "agent-eval"
version = "0.1.0"
description = "MLflow A/B evaluation of agent-registry agents: wired (rubric inlined) vs un-wired (lean body)"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mlflow>=3.8.0",
    "anthropic>=0.40.0",
    "pandas>=2.0",
]

# Optional cloud providers. The base install stays lean; opt in per provider, e.g.
#   uv sync --project eval --extra bedrock      # then EVAL_PROVIDER=bedrock
#   uv sync --project eval --extra vertex       # then EVAL_PROVIDER=vertex
[project.optional-dependencies]
# bedrock judges are native to mlflow (boto3); vertex judges route through LiteLLM,
# so the vertex extra must also pull litellm for the judge side.
bedrock = ["anthropic[bedrock]>=0.40.0"]
vertex = ["anthropic[vertex]>=0.40.0", "litellm>=1.93.0"]

# This is a standalone uv project so the agent-registry root stays runtime-dep-free.
# The eval scripts import the parent `agent_registry` package via sys.path (see agents.py);
# agent_registry is pure-stdlib, so no install of the parent is needed.
#
#   uv run --project eval python eval/run_eval.py --help
